# encrypted-backup

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
backup/: Cargo.toml
backup/src/: backup.rs  lib.rs  memory.rs  pool.rs  types.rs  util.rs
cli/: Cargo.toml
cli/src/: logger.rs  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: backup.rs  backup_crypto.rs  crypto.rs  logger.rs  main.rs  memory.rs  pool.rs  types.rs
ui/: Cargo.toml
ui/assets/css/: main.css
ui/src/: constants.rs  format.rs  icons.rs  logger.rs  main.rs  number.rs
ui/src/components/: app.rs  backup_config.rs  button.rs  config.rs  control_error.rs  dialog.rs  exclude_globs.rs  extraction_config.rs  file_dialog.rs  file_select.rs  icon.rs  icon_button.rs  include_paths_select.rs  loading.rs  mod.rs  path_display.rs  running_operation.rs  slider.rs  text_input.rs
ui/src/hooks/: id.rs
ui/src/services/: config.rs  dir_info.rs  mod.rs  operation.rs  pattern.rs
