[package]
name = "encrypted-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
glob = "0.3.0"
tar = "0.4.38"
aes-gcm = "0.10.1"
sha2 = "0.10.6"
rand = "0.8.5"
tempfile = "3"
log = "0.4"
chrono = "0.4"
rpassword = "7.2"

[dev-dependencies]
project-root = "0.2.2"
