[package]
name = "encrypted-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
log = "0.4"
rand = "0.8"
rpassword = "7.3"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
project-root = "0.2.2"
