[package]
name = "backup"
version = "0.1.0"
license = "MIT"
description = "A tool to securely back up files and directories."
repository = "https://github.com/WKHAllen/encrypted-backup"
readme = "../README.md"
keywords = ["cli", "crypto", "backup"]
categories = ["command-line-utilities", "cryptography", "filesystem"]
edition = "2021"

[dependencies]
aes-gcm = "0.10"
chrono = "0.4"
glob = "0.3"
log = "0.4"
sha2 = "0.10"
tar = "0.4"
thiserror = "1.0"

[dev-dependencies]
project-root = "0.2.2"
rand = "0.8"
tempfile = "3"
