[package]
name = "cli"
version = "0.1.0"
license = "MIT"
description = "A tool to securely back up files and directories."
repository = "https://github.com/WKHAllen/encrypted-backup"
readme = "../README.md"
keywords = ["cli", "crypto", "backup"]
categories = ["command-line-utilities", "cryptography", "filesystem"]
edition = "2021"

[dependencies]
backup = { path = "../backup" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
log = "0.4"
rpassword = "7.3"
