[package]
name = "ui"
version = "0.1.0"
license = "MIT"
description = "A tool to securely back up files and directories."
repository = "https://github.com/WKHAllen/encrypted-backup"
readme = "../README.md"
keywords = ["cli", "crypto", "backup"]
categories = ["command-line-utilities", "cryptography", "filesystem"]
edition = "2021"

[dependencies]
backup = { path = "../backup" }
dioxus = { version = "0.5", features = ["desktop"] }
home = "0.5"
rand = "0.8"
tokio = { version = "1.40", features = ["full"] }
