[package]
name = "ui"
version = "0.1.0"
license = "MIT"
description = "A tool to securely back up files and directories."
repository = "https://github.com/WKHAllen/encrypted-backup"
readme = "../README.md"
keywords = ["cli", "crypto", "backup"]
categories = ["command-line-utilities", "cryptography", "filesystem"]
edition = "2021"

[dependencies]
backup = { path = "../backup" }
chrono = "0.4"
dioxus = { version = "0.6", features = ["desktop"] }
glob = "0.3"
home = "0.5"
log = { version = "0.4", features = ["std"] }
macros = { path = "../macros" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
